frontend now allows sign up and backend work

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL = "https://sturdy-adventure-r4r5vp47rgq7fp5w9-3001.app.github.dev/"
+VITE_BACKEND_URL = "https://sturdy-adventure-r4r5vp47rgq7fp5w9-3001.app.github.dev"
