--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^8.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "victory": "^36.9.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
